Add existing project files prior to the push to GitHub.

--- a/honey-cornflake-cookies.html
+++ b/honey-cornflake-cookies.html
@@ -6,15 +6,9 @@
         
     </head>
 
-    <style>
-        body {
-            background-image: url(img/_.jpeg);
-        }
-    </style>
-
         <a href="index.html"><img src="img/IMG_0429.PNG" alt="Home" style="width:30px;height:30px;"></a>        
 
-    <h1><center><font color="white"><font size="50"</font><font face="Marker Felt">Honey Cornflakes Cookies</font></center></font></h1>
+    <h1><center>Honey Cornflakes Cookies</center></h1>
     
     <body>
         <center><img src="img/a40a40bd-40c4-46fd-90bf-ec73a9910fe3.jpeg" 
