--- a/index.html
+++ b/index.html
@@ -4,13 +4,7 @@
         <meta charset="UTF-8">
         <title>Odin Recipes</title>   
     </head>
-    <style>
-        body {
-            background-image: url(img/_.jpeg);
-        }
-    </style>
-
-    <h1><center><font color="white"><font size="50"</font><font face="Marker Felt">Odin Recipes</font></center></font></h1>
+    <h1><center>Odin Recipes</center></h1>
     
     <body>
         <center><img src="img/fyghibli.gif" alt="ghibli food animation"></center>
