--- a/spicy-chili-prawn.html
+++ b/spicy-chili-prawn.html
@@ -6,15 +6,9 @@
         
     </head>
 
-    <style>
-        body {
-            background-image: url(img/_.jpeg);
-        }
-    </style>
-
         <a href="index.html"><img src="img/IMG_0429.PNG" alt="Home" style="width:30px;height:30px;"></a>        
 
-    <h1><center><font color="white"><font size="50"</font><font face="Marker Felt">Shrimp in Spicy Chili Sauce</font></center></font></h1>
+    <h1><center>Shrimp in Spicy Chili Sauce</center></h1>
     
     <body>
         <center><img src="img/butterkicap-sambal-udang-petai-06112017-14_Copy_.jpeg" 
