--- a/spicy-chicken-curry.html
+++ b/spicy-chicken-curry.html
@@ -6,15 +6,9 @@
         
     </head>
 
-    <style>
-        body {
-            background-image: url(img/_.jpeg);
-        }
-    </style>
-
         <a href="index.html"><img src="img/IMG_0429.PNG" alt="Home" style="width:30px;height:30px;"></a>        
 
-    <h1><center><font color="white"><font size="50"</font><font face="Marker Felt">Spicy Chicken Curry</font></center></font></h1>
+    <h1><center>Spicy Chicken Curry</center></h1>
     
     <body>
         <center><img src="img/ayam_masak_lemak_cili_api_AxfMLEb.jpeg" 
